# cookiecutter-cpp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.rst  README.rst  cookiecutter.json  pytest.ini  requirements_dev.txt  setup.py
.circleci/: config.yml  find_next_version.bash  update_version.bash
.github/: ISSUE_TEMPLATE.md
docker/: Dockerfile  build.sh
docs/: prompts.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitmodules  CMakeLists.txt  CONTRIBUTING.rst  README.rst  conandata.yml  conanfile.txt
{{cookiecutter.project_slug}}/cmake/: conan2.cmake  gtest.cmake
{{cookiecutter.project_slug}}/engine/: CMakeLists.txt
{{cookiecutter.project_slug}}/engine/src/: {{cookiecutter.project_slug}}.h
{{cookiecutter.project_slug}}/engine/src/{{cookiecutter.project_slug}}/: Application.cpp  Application.h  Core.h  application.cpp  application.h
{{cookiecutter.project_slug}}/engine/tests/: CMakeLists.txt  test1.cpp
{{cookiecutter.project_slug}}/engine/tests/Catch2/: CMakeLists.txt  test1.cpp
{{cookiecutter.project_slug}}/engine/tests/GoogleTest/: CMakeLists.txt
{{cookiecutter.project_slug}}/logging/: Log.cpp
{{cookiecutter.project_slug}}/sandbox/: CMakeLists.txt
{{cookiecutter.project_slug}}/sandbox/src/: EntryPoint.cpp  Sandbox.cpp  Sandbox.h
{{cookiecutter.project_slug}}/sandbox/tests/: CMakeLists.txt  test1.cpp
{{cookiecutter.project_slug}}/sandbox/tests/Catch2/: test1.cpp
{{cookiecutter.project_slug}}/sandbox/tests/GoogleTest/: CMakeLists.txt
